samples/transactions/ballerina-springboot-transactions/travel_mgt_service_ballerina/kubernetes/travel_initiator_deployment.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  annotations: {}
  finalizers: []
  labels:
    app: "travel_initiator"
  name: "ballerina-bridge-sample-travel-mgt"
  ownerReferences: []
spec:
  replicas: 1
  template:
    metadata:
      annotations: {}
      finalizers: []
      labels:
        app: "travel_initiator"
      ownerReferences: []
    spec:
      containers:
      - args: []
        command: []
        envFrom: []
        image: "ballerina/bridge-sample-travel-mgt:0.970"
        imagePullPolicy: "IfNotPresent"
        name: "ballerina-bridge-sample-travel-mgt"
        ports:
        - containerPort: 6060
          protocol: "TCP"
        volumeMounts:
        - mountPath: "/home/ballerina/conf/"
          name: "travelmgtinitiator-ballerina-conf-config-map-volume"
          readOnly: false
      hostAliases: []
      imagePullSecrets: []
      initContainers: []
      nodeSelector: {}
      tolerations: []
      volumes:
      - configMap:
          items: []
          name: "travelmgtinitiator-ballerina-conf-config-map"
        name: "travelmgtinitiator-ballerina-conf-config-map-volume"
