samples/transactions/ballerina-springboot-transactions/travel_mgt_service_ballerina/kubernetes/travel_initiator_svc.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations: {}
  finalizers: []
  labels:
    app: "travel_initiator"
  name: "bridge-sample-travel-mgt-service"
  ownerReferences: []
spec:
  externalIPs: []
  loadBalancerSourceRanges: []
  ports:
  - port: 6060
    protocol: "TCP"
    targetPort: 6060
  selector:
    app: "travel_initiator"
  type: "NodePort"
