samples/transactions/ballerina-springboot-transactions/travel_mgt_service_ballerina/kubernetes/travel_initiator_ingress.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    kubernetes.io/ingress.class: "nginx"
  finalizers: []
  labels:
    app: "travel_initiator"
  name: "bridge-sample-travel-mgt-ingress"
  ownerReferences: []
spec:
  rules:
  - host: "travelmgt.sample.bridge.io"
    http:
      paths:
      - backend:
          serviceName: "bridge-sample-travel-mgt-service"
          servicePort: 6060
        path: "/"
  tls:
  - hosts: []
